<resources>
    <string name="app_name">TrackMixing</string>
    <string name="title_activity_tracks_list">TracksListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="item_track_separator_character">·</string>
    <string name="item_test_data_selection_separator_character">·</string>
    <string name="select_test_data_available_space">(%1$s available)</string>
    <string name="player_bottom_title">%1$s - %2$s</string>
    <string name="track_item_data_template">%1$s\u0020\u0020|\u0020\u0020%2$s\u0020\u0020|\u0020\u0020%3$s</string>
    <string name="tracks_list_toolbar_title">My studio</string>
    <string name="track_player_action_button_content_description">Play or pause current media</string>
    <string name="track_player_faders_vocals_label">Vocals</string>
    <string name="track_player_faders_other_label">Other</string>
    <string name="track_player_faders_bass_label">Bass</string>
    <string name="track_player_faders_drums_label">Drums</string>
    <string name="track_player_progress_current_timestamp_default_text">0:00</string>
    <string name="track_player_progress_length_default_text">--:--</string>
</resources>
