<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_player_faders"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/container_faders"
        android:layout_width="match_parent"
        android:layout_height="@dimen/track_player_fader_container_height"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.smascaro.trackmixing.main.components.player.view.widget.PivotableSeekbar
                android:id="@+id/sb_track_player_vocals"
                style="@style/TrackPlayerFadersSeekBarStyle"
                android:layout_alignBottom="@id/tv_track_player_vocals" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_track_player_vocals"
                style="@style/TrackPlayerFadersLabel"
                android:text="@string/track_player_faders_vocals_label" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.smascaro.trackmixing.main.components.player.view.widget.PivotableSeekbar
                android:id="@+id/sb_track_player_other"
                style="@style/TrackPlayerFadersSeekBarStyle"
                android:layout_alignBottom="@id/tv_track_player_other" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_track_player_other"
                style="@style/TrackPlayerFadersLabel"
                android:text="@string/track_player_faders_other_label" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.smascaro.trackmixing.main.components.player.view.widget.PivotableSeekbar
                android:id="@+id/sb_track_player_bass"
                style="@style/TrackPlayerFadersSeekBarStyle"
                android:layout_alignBottom="@id/tv_track_player_bass" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_track_player_bass"
                style="@style/TrackPlayerFadersLabel"
                android:text="@string/track_player_faders_bass_label" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.smascaro.trackmixing.main.components.player.view.widget.PivotableSeekbar
                android:id="@+id/sb_track_player_drums"
                style="@style/TrackPlayerFadersSeekBarStyle"
                android:layout_alignBottom="@id/tv_track_player_drums" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_track_player_drums"
                style="@style/TrackPlayerFadersLabel"
                android:text="@string/track_player_faders_drums_label" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/container_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_faders">

        <SeekBar
            android:id="@+id/sb_track_player_timestamp"
            style="@style/TrackPlayerFadersProgressSeekBar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_track_player_current_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sb_track_player_timestamp"
            android:layout_alignStart="@id/sb_track_player_timestamp"
            android:text="@string/track_player_progress_current_timestamp_default_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_track_player_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sb_track_player_timestamp"
            android:layout_alignEnd="@id/sb_track_player_timestamp"
            android:text="@string/track_player_progress_length_default_text" />
    </RelativeLayout>
</RelativeLayout>
