<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_player_faders"
    android:paddingTop="28dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.smascaro.trackmixing.base.ui.widget.PivotableSeekbar
        android:id="@+id/sb_track_player_vocals"
        style="@style/TrackPlayerFadersSeekBarStyle"
        android:layout_width="@dimen/track_player_fader_width"
        android:layout_height="@dimen/track_player_fader_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sb_track_player_other"/>

    <TextView
        android:id="@+id/tv_track_player_vocals"
        style="@style/TrackPlayerFadersLabel"
        app:layout_constraintTop_toBottomOf="@id/sb_track_player_vocals"
        app:layout_constraintStart_toStartOf="@id/sb_track_player_vocals"
        app:layout_constraintEnd_toEndOf="@id/sb_track_player_vocals"
        android:text="@string/track_player_faders_vocals_label" />


    <com.smascaro.trackmixing.base.ui.widget.PivotableSeekbar
        android:id="@+id/sb_track_player_other"
        style="@style/TrackPlayerFadersSeekBarStyle"
        android:layout_width="@dimen/track_player_fader_width"
        android:layout_height="@dimen/track_player_fader_height"
        app:layout_constraintTop_toTopOf="@id/sb_track_player_vocals"
        app:layout_constraintStart_toEndOf="@id/sb_track_player_vocals"
        app:layout_constraintEnd_toStartOf="@id/sb_track_player_bass"
        />

    <TextView
        android:id="@+id/tv_track_player_other"
        style="@style/TrackPlayerFadersLabel"
        app:layout_constraintTop_toBottomOf="@id/sb_track_player_other"
        app:layout_constraintStart_toStartOf="@id/sb_track_player_other"
        app:layout_constraintEnd_toEndOf="@id/sb_track_player_other"
        android:text="@string/track_player_faders_other_label" />


    <com.smascaro.trackmixing.base.ui.widget.PivotableSeekbar
        android:id="@+id/sb_track_player_bass"
        style="@style/TrackPlayerFadersSeekBarStyle"
        android:layout_width="@dimen/track_player_fader_width"
        android:layout_height="@dimen/track_player_fader_height"
        app:layout_constraintTop_toTopOf="@id/sb_track_player_other"
        app:layout_constraintStart_toEndOf="@id/sb_track_player_other"
        app:layout_constraintEnd_toStartOf="@id/sb_track_player_drums"

        />

    <TextView
        android:id="@+id/tv_track_player_bass"
        style="@style/TrackPlayerFadersLabel"
        app:layout_constraintTop_toBottomOf="@id/sb_track_player_bass"
        app:layout_constraintStart_toStartOf="@id/sb_track_player_bass"
        app:layout_constraintEnd_toEndOf="@id/sb_track_player_bass"
        android:text="@string/track_player_faders_bass_label" />


    <com.smascaro.trackmixing.base.ui.widget.PivotableSeekbar
        android:id="@+id/sb_track_player_drums"
        style="@style/TrackPlayerFadersSeekBarStyle"
        android:layout_width="@dimen/track_player_fader_width"
        android:layout_height="@dimen/track_player_fader_height"
        app:layout_constraintTop_toTopOf="@id/sb_track_player_bass"
        app:layout_constraintStart_toEndOf="@id/sb_track_player_bass"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_track_player_drums"
        style="@style/TrackPlayerFadersLabel"
        app:layout_constraintTop_toBottomOf="@id/sb_track_player_drums"
        app:layout_constraintStart_toStartOf="@id/sb_track_player_drums"
        app:layout_constraintEnd_toEndOf="@id/sb_track_player_drums"
        android:text="@string/track_player_faders_drums_label" />


    <RelativeLayout
        android:id="@+id/container_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_track_player_vocals">

        <SeekBar
            android:id="@+id/sb_track_player_timestamp"
            style="@style/TrackPlayerFadersProgressSeekBar" />

        <TextView
            android:id="@+id/tv_track_player_current_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sb_track_player_timestamp"
            android:layout_alignStart="@id/sb_track_player_timestamp"
            android:text="@string/track_player_progress_current_timestamp_default_text" />

        <TextView
            android:id="@+id/tv_track_player_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sb_track_player_timestamp"
            android:layout_alignEnd="@id/sb_track_player_timestamp"
            android:text="@string/track_player_progress_length_default_text" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btn_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/ic_play"
        android:backgroundTint="#ffffff" />
</androidx.constraintlayout.widget.ConstraintLayout>
